--- a/TASK 2 - Portfolio/portfolio.html
+++ b/TASK 2 - Portfolio/portfolio.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -92,7 +92,7 @@
             landing page features high-quality images of hijabs with descriptions. This project showcases my expertise
             in HTML and CSS.
           <ul>&nbsp;
-            <a href="url link" target="_blank" class="btn">Visit Landing Page</a>
+            <a href="https://abqari-landing-page.netlify.app/" target="_blank" class="btn">Visit Landing Page</a>
           </ul>
 
           </p>
